--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <a class="nav-link active" href="">Home</a>
+            <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
+            <a class="nav-link" href="{% url 'accounts:user_signup' %}">Sign Up</a>
         </div>
     </div>
 </nav>
