--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,6 +3,7 @@
         <div class="navbar-nav">
             <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
             <a class="nav-link" href="{% url 'accounts:user_signup' %}">Sign Up</a>
+            <a class="nav-link" href="{% url 'accounts:user_login' %}">Login</a>
         </div>
     </div>
 </nav>
