--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h2>{{ product.name }}</h2>
-            <small>{{ product.created.date }}</small> <br> <br>
-            <p>{{ product.description }}</p>
-            <p>{{ product.price }}</p> <br>
-            <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>{{ product.name }}</h2>
+                <small>{{ product.created.date }}</small> <br> <br>
+                <p>{{ product.description }}</p>
+                <p>{{ product.price }}</p> <br>
+                <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
+            </div>
         </div>
     </div>
 {% endblock %}
