--- a/home/templates/home/bucket_home.html
+++ b/home/templates/home/bucket_home.html
@@ -2,26 +2,27 @@
 
 {% block content %}
 
-    <table class="table table-dark">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Size</th>
-          <th scope="col">Download</th>
-          <th scope="col">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for bucket in objects %}
-        <tr>
-          <th scope="row">{{ forloop.counter }}</th>
-          <td>{{ bucket.Key }}</td>
-          <td>{{ bucket.Size|filesizeformat }}</td>
-          <td>download</td>
-          <td><a href="{% url 'home:bucket_delete' bucket.Key %}">delete</a></td>
-        </tr>
-      {% endfor %}
-      </tbody>
-    </table>
+<table class="table table-dark">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Size</th>
+        <th scope="col">Download</th>
+        <th scope="col">Delete</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for bucket in objects %}
+    <tr>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>{{ bucket.Key }}</td>
+        <td>{{ bucket.Size|filesizeformat }}</td>
+        <td><a href="{% url 'home:download_bucket' bucket.Key %}">download</a></td>
+        <td><a href="{% url 'home:bucket_delete' bucket.Key %}">delete</a></td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
 {% endblock %}
