--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,7 @@
     <title>Online Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base_style.css' %}">
-    {% block extra_headers %}
-
-    {% endblock %}
+    {% block extra_headers %} {% endblock %}
 </head>
 <body>
 
