--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -8,7 +8,7 @@
                 <small>{{ product.created.date }}</small> <br> <br>
                 <p>{{ product.description }}</p>
                 <p>{{ product.price }}</p> <br>
-                <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
+                <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap" , style="width: 300px">
             </div>
         </div>
     </div>
