--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,8 +6,23 @@
     {% endblock %}
 
 {% block content %}
+
+    {% for category in categories %}
+<div class="btn-group">
+            <a href="{{ category.get_absolute_url }}" class="btn btn-primary">{{ category.name }}</a>
+            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                {% for sub in category.Scategory.all %}
+                <li><a class="dropdown-item" href="{{ sub.get_absolute_url }}">{{ sub.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endfor %}
+    <br><br>
     {% for product in products %}
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem; display: inline-block">
   <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><a href="{{ product.get_absolute_url }}" >{{ product.name }}</a></h5>
